# calvin_env_10

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/: merged_config.yaml
src/: requirements.txt
src/calvin_env_10.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/calvin_env_10/camera/: static_camera.py  tactile_sensor.py
src/calvin_env_10/conf/tasks/: new_playtable_tasks.yaml
src/calvin_env_10/envs/: play_table_env.py  tasks.py
src/calvin_env_10/evaluation/: multi_step_evaluation.py  sequences.py  utils.py
src/calvin_env_10/evaluation/wandb/: latest-run
src/calvin_env_10/evaluation/wandb/run-20250718_161237-uszybxyh/: run-uszybxyh.wandb
src/calvin_env_10/evaluation/wandb/run-20250718_161237-uszybxyh/files/: requirements.txt  wandb-metadata.json
src/calvin_env_10/scene/: play_table_scene.py
src/calvin_env_10/scene/objects/: movable_object.py
src/calvin_env_10/task_configs/: task_A.yaml  task_B.yaml  task_C.yaml  task_D.yaml  task_D_D.yaml
tests/: test_environment.py
