[project]
name = "calvin-env-10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "antlr4-python3-runtime==4.9.3",
    "cloudpickle==3.1.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "fonttools==4.58.4",
    "freetype-py==2.5.1",
    "gym==0.26.2",
    "gym-notices==0.0.8",
    "hydra-core==1.3.2",
    "imageio==2.37.0",
    "kiwisolver==1.4.8",
    "lxml==5.4.0",
    "matplotlib==3.10.3",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "numpy-quaternion==2024.0.9",
    "omegaconf==2.3.0",
    "opencv-python==4.11.0.86",
    "packaging==25.0",
    "pillow==11.2.1",
    "pybullet==3.2.7",
    "pycollada==0.6",
    "pyglet==2.1.6",
    "pyopengl==3.1.0",
    "pyparsing==3.2.3",
    "pyrender==0.1.45",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "quaternion==3.5.2.post4",
    "rich==14.0.0",
    "scipy==1.15.3",
    "six==1.17.0",
    "tacto@git+https://github.com/facebookresearch/tacto.git",
    "trimesh==4.6.12",
    "urdfpy@git+https://github.com/NikeHop/urdfpy.git",
]


[tool.setuptools.package-data]
calvin_env_10 = ["task_configs/*.yaml", "data/*", "conf/*"]

